Version 0.7.5
  - Swedish translation added.

  - Makefile and source code distribution problems fixed.

  - Documentation updates.

  - Bug fixes:
    - agrep now correctly returns exit code 1 when no matches found.
    - Fixed regexp parser bug affecting big-endian 64 bit
      architectures (sparc, ppc).  The bug caused all regexps to match
      an empty string and nothing else.

Version 0.7.4

  - TRE now builds cleanly on x86_64 and other 64 bit platforms.
    There was a large number of (basically harmless) compiler warnings
    in previous versions.

  - Now builds and works on Cygwin and MinGW.  Libtool was updated to
    a version which works on these platforms, and the Makefiles and
    configure scripts were adjusted so that DLLs are now built on
    these platforms.

  - agrep now handles long command line options on all platforms.

  - Bug report email address is now tre-general@lists.laurikari.net.

  - Many bug fixes, including:
    - The RPM spec file now works with recent rpmbuild versions
    - agrep no longer includes record delimiters in records, so for
      example "echo foo | agrep 'foo$'" works as expected.
    - agrep help texts and man page updated.

Version 0.7.3
  - The license has been changed from GPL to LGPL.

  - New command line option to agrep: --show-position

  - New REG_UNGREEDY cflags and 'U' pattern modifier.

  - Bug fixes.

Version 0.7.2
  - Bug fixes.

Version 0.7.1
  - New command line options to agrep: --delimiter-after, --color

  - Man page for agrep added.

  - Some bugs fixed.

Version 0.7.0
  - reguexec() added.

  - tre_have_backrefs() and tre_have_approx() added.

  - New syntax: \Q, \E, \x1B, \x{263a}, (?inr-inr), (?inr-inr:regex).

  - New compilation flag REG_RIGHT_ASSOC.

  - New execution flags REG_APPROX_MATCHER and REG_BACKTRACKING_MATCHER.

  - Included Python language bindings contributed by Nikolai SAOUKH.

  - Several bugs and compilation problems fixed.

Version 0.6.8