@@ -15,6 +15,7 @@ George Harpur <gfh@neurascript.com>
 Jan Kasprzak <kas@fi.muni.cz>
 Rune Kleveland <runekl@opoint.com>
 Rici Lake <RLake@oxfam.org.uk>
+Bram Matthys <syzop@vulnscan.org>
 Dominick Meglio <codemstr@ptd.net>
 Aymeric Moizard <jack@atosc.org>
 Daniel Nylander <po@danielnylander.se>
